# swen640-research

./: .gitignore  README.md  example.env  pyproject.toml
.github/workflows/: ci.yml
data-backup/: README.md
notebooks/: analysis.py  app.py  notebook.py
src/: utils.py
tests/: test_sample.py
